inizia la gestione del profilo

--- a/public/frontend/css/homepage.css
+++ b/public/frontend/css/homepage.css
@@ -22,3 +22,12 @@ nav {
 .active {
     color: yellow !important;
 }
+
+#page-nav {
+    background-color: transparent;
+}
+
+.page-link {
+    background-color: black;
+    color: white;
+}
