--- a/public/frontend/css/homepage.css
+++ b/public/frontend/css/homepage.css
@@ -5,6 +5,9 @@ body {
 
 .bg-darkred {
     background-color: rgb(149, 18, 18) !important;
+    min-height: 100vh;
+    background-size: 100% 100vh;
+    background-attachment: fixed;
 }
 
 header {
